added progressbar component

--- a/src/mainstylesheet/mainstyle.scss
+++ b/src/mainstylesheet/mainstyle.scss
@@ -10,7 +10,13 @@
   margin: 0 auto;
   padding-top: 40px;
 }
+.progress-bar{
+  max-width: 50%;
+  margin:2% auto;
+  
+  
 
+}
 header{
   background: #F8F9FA;
   .logo-image{
