--- a/src/components/setupAdmins/stylesheet/style.scss
+++ b/src/components/setupAdmins/stylesheet/style.scss
@@ -1,69 +1,40 @@
-.setupAdmins{
+.setupAdmins {
   margin-top: 50px;
-  .wrapper{
-    border: 1px solid gray;
-    max-width: 1100px;
-    width: 100%;
-    margin: 0 auto;
-    .heading{
-      .list{
-        display: flex;
-        justify-content: space-between;
-        padding: 20px 10px 0;
-        li{
-          list-style: none;
-          &:nth-child(2){
-            padding-left: 9px;
-          }
-          &:nth-child(3){
-            padding-left: 18px;
-          }
-          &:last-child{
-            width: 5%;
-          }
-        }
+
+  .table {
+    width:80%;
+    margin:0 auto;
+    border: 1px solid lightgray;
+
+    .list{
+      input[type="text"]{
+        padding:10px;
+        border: 1px solid lightgray;
       }
+       input[type="date"]{
+         padding:9px;
+         border: 1px solid lightgray;
+
+       }
+
     }
-    .input{
-      border-top: 1px solid black;
-      .list{
-        display: flex;
-        justify-content: space-between;
-        padding: 24px 10px;
-        li{
-          list-style: none;
-          input{
-            padding: 10px;
-            width: 100%;
-          }
-          .dateInput{
-            padding: 9px 12px;
-          }
-          &:nth-child(4){
-            padding-right: 15px;
-          }
-          &:last-child{
-            width: 4%;
-            line-height: 3;
-          }
-          input[type=radio] {
-            width: 20px;
-            height: 20px;
-          }
-        }
-      }
-    }
-    .addMore{
-      border-top: 1px solid black;
-      padding: 20px 20px;
-      .addBtn{
-        border-radius: 50%;
-        background: transparent;
-        border: 1px solid black;
-        &:hover{
-          cursor: pointer;
-        }
-      }
-    }
+
   }
+
+
+
+
+
+    .addBtn {
+      border-radius: 50%;
+      background: transparent;
+      color: #d3d3d3;
+      border: 1px solid  #d3d3d3;
+      outline:0;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
 }
