--- a/src/mainstylesheet/mainstyle.css
+++ b/src/mainstylesheet/mainstyle.css
@@ -1,183 +1,94 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0; }
+
 .container {
   max-width: 1200px;
   width: 100%;
+  margin: 0 auto; }
+
+.wrapper {
+  width: 90%;
   margin: 0 auto;
-}
+  display: flex;
+  justify-content: space-between; }
 
 .formwrapper {
-  max-width: 400px;
-  width: 100%;
+  width: 50%;
   margin: 0 auto;
-  padding-top: 40px;
-}
+  padding-top: 40px; }
 
 .progress-bar {
-  max-width: 50%;
-  margin: 2% auto;
-}
+  width: 50%;
+  margin: 0 auto; }
 
 header {
   background: #F8F9FA;
-  padding: 10px;
-  box-shadow: 0px 0px 7px 5px #c4c4c4;
-}
-header .logo-image {
-  height: 33px;
-  width: 118px;
-}
-header .search-icon {
-  background: #cccaca;
-  border-radius: 20px;
-  padding: 8px 12px;
-  margin-right: 20px;
-  color: #fff;
-}
-header .fa-user-circle {
-  font-size: 40px;
-  line-height: 1.2;
-  color: #cccaca;
-}
+  padding: 20px;
+  box-shadow: 0px 0px 7px 5px #c4c4c4; }
+  header .logo-image {
+    height: 33px;
+    width: 118px; }
+  header a {
+    line-height: 3;
+    text-decoration: none;
+    color: gray;
+    margin-left: 20px; }
+  header :first-child {
+    margin-left: 0; }
+  header .search-icon {
+    background: #cccaca;
+    border-radius: 20px;
+    padding: 8px 12px;
+    color: #fff; }
+  header .fa-user-circle {
+    font-size: 40px;
+    color: #cccaca; }
 
-.next-btn {
-  float: right;
-  margin-bottom: 20px;
-  margin-top: 20px;
-}
+.main-heading {
+  background: rgba(224, 225, 225, 0.41);
+  text-align: center;
+  padding: 30px 0; }
+  .main-heading h1 {
+    font-size: 16px;
+    font-weight: 500; }
 
 .back-btn {
   float: left;
   margin-bottom: 20px;
+  margin-top: 20px; }
+
+.form1 {
+  width: 60%;
+  margin: 50px auto;
+  padding-top: 60px; }
+  .form1 h2 {
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 80px;
+    padding-bottom: 10px;
+    position: relative; }
+    .form1 h2::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      border-bottom: 1px solid #c4c4c4; }
+  .form1 .form-group label {
+    font-size: 16px;
+    font-weight: 500; }
+
+.next-btn {
+  float: right;
+  padding: 8px;
+  border-radius: 5px;
+  outline: none;
+  border: 0;
+  margin-bottom: 20px;
   margin-top: 20px;
-}
-
-.assignProducts label, .companyDetails label {
-  width: 50%;
-}
-.assignProducts .form-check-inline, .companyDetails .form-check-inline {
-  margin-bottom: 30px;
-}
-.assignProducts .form-check-inline .form-check-input, .companyDetails .form-check-inline .form-check-input {
-  height: 20px;
-  width: 20px;
-}
-.assignProducts .form-check-inline label, .companyDetails .form-check-inline label {
-  width: 100%;
-  color: #000;
-}
-
-.assignProducts {
-  border-bottom: 1px solid #adaaaa;
-  padding-left: 50px;
-}
-.assignProducts .fixedRate {
-  padding-left: 24px;
-  padding-bottom: 30px;
-}
-.assignProducts .fixedRate .selectRequired {
-  font-size: 14px;
-  color: #8d8a8a;
-}
-.assignProducts .fixedRate .form-check {
-  margin-bottom: 10px;
-}
-.assignProducts .fixedRate .form-check .form-check-label {
-  color: #000;
-}
-.assignProducts .fixedRate .requiredCheck {
-  padding-left: 23px;
-  font-size: 12px;
-  color: #8d8a8a;
-}
-.assignProducts .fixedRate .taxText {
-  font-size: 14px;
-  color: #7a7676;
-  padding-top: 20px;
-}
-.assignProducts .fixedRate .tax input[type=checkbox], .assignProducts .fixedRate .tax input[type=radio] {
-  width: 20px;
-  height: 20px;
-}
-.assignProducts .fixedRate .tax .tax-label {
-  line-height: 1.8;
-  padding-left: 10px;
-}
-.assignProducts .fixedRate .incomeTax {
-  padding: 0;
-  max-width: 300px;
-  width: 100%;
-}
-
-.paymentMethod {
-  padding-top: 25px;
-  padding-bottom: 20px;
-}
-.paymentMethod .paymentContent {
-  font-style: italic;
-  font-size: 14px;
-  padding-left: 10px;
-}
-.paymentMethod input[type=checkbox], .paymentMethod input[type=radio] {
-  width: 20px;
-  height: 20px;
-}
-.paymentMethod .payment-label {
-  line-height: 1.8;
-  padding-left: 10px;
-}
-.paymentMethod .funds {
-  padding-left: 20px;
-}
-.paymentMethod .funds .payment-label {
-  width: 50%;
-}
-.paymentMethod .concur .payment-label {
-  padding-bottom: 8px;
-}
-.paymentMethod .payFreq {
-  padding-top: 35px;
-}
-.paymentMethod .payFreqLabel {
-  padding-left: 50px;
-}
-
-.driverManagement {
-  padding-top: 25px;
-  padding-bottom: 20px;
-  border-top: 1px solid #adaaaa;
-}
-.driverManagement input[type=radio] {
-  width: 20px;
-  height: 20px;
-}
-.driverManagement .driverManageOptions {
-  padding-left: 70px;
-  padding-top: 10px;
-}
-.driverManagement .driverManageOptions .payment-label {
-  line-height: 1.8;
-  padding-left: 10px;
-}
-
-.fixedPaySchedule {
-  padding-top: 25px;
-  padding-bottom: 20px;
-}
-.fixedPaySchedule input[type=radio] {
-  width: 20px;
-  height: 20px;
-}
-.fixedPaySchedule .fpContent {
-  font-style: italic;
-  font-size: 14px;
-  padding-left: 10px;
-}
-.fixedPaySchedule .fixedPayOptions {
-  padding-left: 70px;
-  padding-top: 10px;
-}
-.fixedPaySchedule .fixedPayOptions .payment-label {
-  line-height: 1.8;
-  padding-left: 10px;
-}
+  background: #0077b6;
+  color: #ffffff; }
 
 /*# sourceMappingURL=mainstyle.css.map */
