--- a/src/mainstylesheet/mainstyle.scss
+++ b/src/mainstylesheet/mainstyle.scss
@@ -1,21 +1,36 @@
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
+
+$primary-color:#c4c4c4;
+
+@mixin heading($size,$weight){
+  font-size:$size;
+  font-weight:$weight;
+}
 .container{
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
 }
 
+.wrapper{
+  width:90%;
+  margin:0 auto;
+  display:flex;
+  justify-content: space-between;
+}
+
 .formwrapper{
-  max-width: 400px;
-  width: 100%;
+  width:50%;
   margin: 0 auto;
   padding-top: 40px;
 }
 .progress-bar{
-  max-width: 50%;
-  margin:2% auto;
-  
-  
-
+  width:50%;
+  margin:0 auto;
 }
 header{
   background: #F8F9FA;
@@ -23,27 +38,42 @@ header{
     height: 33px;
     width: 118px;
   }
+
+  a{
+    line-height: 3;
+    text-decoration: none;
+    color: gray;
+    margin-left: 20px;
+  }:first-child{
+  margin-left: 0;
+     }
+
   .search-icon{
     background: rgb(204, 202, 202);
     border-radius: 20px;
     padding: 8px 12px;
-    margin-right: 20px;
     color: #fff;
   }
   .fa-user-circle{
     font-size: 40px;
-    line-height: 1.2;
     color: rgb(204, 202, 202);
   }
-  padding: 10px;
-  box-shadow: 0px 0px 7px 5px #c4c4c4;
+  padding: 20px;
+  box-shadow: 0px 0px 7px 5px $primary-color;
 }
 
-.next-btn{
-  float: right;
-  margin-bottom: 20px;
-  margin-top: 20px;
+.main-heading{
+  background: rgba(224, 225, 225, 0.41);
+  text-align: center;
+  padding:30px 0;
+
+  h1{
+    @include heading(16px,500);
+  }
 }
+
+
+
 
 .back-btn{
   float: left;
@@ -51,143 +81,73 @@ header{
   margin-top: 20px;
 }
 
-%form{
-  label{
-    width: 50%;
-  }
-  .form-check-inline{
-    margin-bottom: 30px;
-    .form-check-input{
-      height: 20px;
-      width: 20px;
+
+.form1{
+  width:60%;
+  margin:50px auto;
+  padding-top:60px;
+  h2{
+    @include heading(24px,500);
+    margin-top:80px;
+    padding-bottom: 10px;
+    position:relative;
+    &::after{
+      content:"";
+      position:absolute;
+      bottom:0;
+      left:0;
+      width:100%;
+      border-bottom:1px solid $primary-color;
     }
+  }
+
+  .form-group{
     label{
-      width: 100%;
-      color: #000;
+      @include heading(16px,500);
     }
   }
+
 }
 
-.companyDetails{
-  @extend %form;
-}
 
-.assignProducts{
-  @extend %form;
-  border-bottom: 1px solid rgb(173, 170, 170);
-  padding-left: 50px;
-  .fixedRate{
-    padding-left: 24px;
-    padding-bottom: 30px;
-    .selectRequired{
-      font-size: 14px;
-      color: rgb(141, 138, 138);
-    }
-    .form-check{
-      margin-bottom: 10px;
-      .form-check-label{
-        color: #000;
-      }
-    }
-    .requiredCheck{
-      padding-left: 23px;
-      font-size: 12px;
-      color: rgb(141, 138, 138);
-    }
-    .taxText{
-      font-size: 14px;
-      color: rgb(122, 118, 118);
-      padding-top: 20px;
-    }
-    .tax{
-      input[type=checkbox], input[type=radio] {
-        width: 20px;
-        height: 20px;
-      }
-      .tax-label{
-        line-height: 1.8;
-        padding-left: 10px;
-      }
-    }
-    .incomeTax{
-      padding: 0;
-      max-width: 300px;
-      width: 100%;
-    }
-  }
-}
 
-.paymentMethod{
-  padding-top: 25px;
-  padding-bottom: 20px;
-  .paymentContent{
-    font-style: italic;
-    font-size: 14px;
-    padding-left: 10px;
-  }
-  input[type=checkbox], input[type=radio] {
-    width: 20px;
-    height: 20px;
-  }
-  .payment-label{
-    line-height: 1.8;
-    padding-left: 10px;
-  }
-  .funds{
-    padding-left: 20px;
-    .payment-label{
-      width: 50%;
-    }
-  }
-  .concur{
-    .payment-label{
-      padding-bottom: 8px;
-    }
-  }
-  .payFreq{
-    padding-top: 35px;
-  }
-  .payFreqLabel{
-    padding-left: 50px;
-  }
-}
 
-.driverManagement{
-  padding-top: 25px;
-  padding-bottom: 20px;
-  border-top: 1px solid rgb(173, 170, 170);
-  input[type=radio] {
-    width: 20px;
-    height: 20px;
-  }
-  .driverManageOptions{
-    padding-left: 70px;
-    padding-top: 10px;
-    .payment-label{
-      line-height: 1.8;
-      padding-left: 10px;
-    }
-  }
-}
 
-.fixedPaySchedule{
-  padding-top: 25px;
-  padding-bottom: 20px;
-  input[type=radio] {
-    width: 20px;
-    height: 20px;
-  }
-  .fpContent{
-    font-style: italic;
-    font-size: 14px;
-    padding-left: 10px;
-  }
-  .fixedPayOptions{
-    padding-left: 70px;
-    padding-top: 10px;
-    .payment-label{
-      line-height: 1.8;
-      padding-left: 10px;
-    }
-  }
+//%form{
+//  label{
+//    width: 50%;
+//  }
+//  .form-check{
+//    margin-top:50px;
+//    background:#E0E1E1;
+//  }
+//  .form-check-inline{
+//    margin-bottom: 30px;
+//    .form-check-input{
+//      height: 20px;
+//      width: 20px;
+//    }
+//    label{
+//      width: 100%;
+//      color: #000;
+//      font-weight:600;
+//    }
+//  }
+//}
+//
+//.companyDetails{
+//  @extend %form;
+//}
+
+
+.next-btn{
+  float: right;
+  padding: 8px;
+  border-radius: 5px;
+  outline: none;
+  border: 0;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  background: #0077b6;
+  color:#ffffff;
 }
